fixing logo menu wrapp in fluid view

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -342,6 +342,12 @@
 				position: relative;
 				width: auto;
 			}
+			&.container-fluid{
+				.logo-menu-inner{
+					margin-left: 0 !important;
+					margin-right: 0;
+				}
+			}
 		}
 
         &.logo-menu-absolute {
