--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1072,6 +1072,10 @@ code{
 	&.container{
 		width: 900px;
 	}
+	&.container-fluid{
+		margin-left: 20px;
+		margin-right: 20px;
+	}
 	.navbar-inner{
 		border: 0;
 		min-height: 20px;
